# programming-projects

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_hessian.ipynb
projects/00_cheminformatics/: background.ipynb  excericeone-openthehood.py  exercise.ipynb  notebook.ipynb  solution.ipynb
projects/00_introduction.ipynb/: notebook.ipynb
projects/01_quantum-chemistry/: background.ipynb  playalong.ipynb
projects/02_hessian/: background.ipynb  hint.ipynb  project.ipynb  refined_hessian.ipynb  refined_hessian.py  refined_hessian_version2.py  solution.ipynb
projects/02_hessian_draft/: background.ipynb  notebook.ipynb  project.ipynb
projects/03_eigenvalue-problem/: background.ipynb  exercise.ipynb  solution.ipynb
projects/03_linear-algebra/: background.ipynb
projects/04_vibrations/: background.ipynb  project.ipynb  solution.ipynb  solution_util.py  util.py
src/protochem/: geom.py  smiles.py
src/protochem/qc/: __init__.py  struc.py
src/protochem/rd/: __init__.py  mol.py  mol_.py
src/protochem/util/: __init__.py  types.py
src/protomol/: __init__.py  geom.py  smiles.py
src/protomol/qc/: struc.py
src/protomol/rd/: mol.py
src/protomol/util/: __init__.py  units.py
src/protopilot/: __init__.py
