[project]
authors = [{name = "Andreas Copan", email = "avcopan@gmail.com"}]
description = "Add a short description here"
name = "protopilot"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["qcio[view]>=0.12.1,<0.13", "qcop[xtb]>=0.9.4,<0.10", "mendeleev>=1.0.0,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
protopilot = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
ipython = "8.15.*"
jupyter = "*"
numpy = "1.26.*"
py3dmol = "*"
pydantic = "*"
rdkit = "*"
scipy = "1.12.*"
xarray = "2023.8.*"
pint = ">=0.24.4,<0.25"
geometric = ">=1.1,<2"
crest = ">=3.0.2,<4"
sympy = ">=1.13.3,<2"
